--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,10 @@ body {
   width: 200px;
   height: 200px;
   transform-style: preserve-3d;
-  transform: rotateX(-30deg) rotateY(45deg) translateZ(0px) rotate(0deg);
+  transform: rotateX(-30deg) 
+             rotateY(45deg)
+             translateZ(0px) 
+             rotate(0deg);
   animation: spin 4.5s ease infinite;
 }
 
@@ -65,23 +68,36 @@ body {
 }
 
 .front {
-  transform: rotateX(180deg) translateZ(-100px);
+  transform: rotateX(180deg)
+             translateZ(-100px);
 }
 
 .back {
-  transform: rotateX(180deg) translateZ(100px) rotate(180deg) rotateY(180deg);
+  transform: rotateX(180deg) 
+             translateZ(100px) 
+             rotate(180deg) 
+             rotateY(180deg);
 }
 
 .right {
-  transform: rotateY(90deg) translateZ(100px) rotate(-90deg) rotateX(180deg);
+  transform: rotateY(90deg)
+             translateZ(100px) 
+             rotate(-90deg)
+             rotateX(180deg);
 }
 
 .left {
-  transform: rotateY(-90deg) translateZ(100px) rotatex(180deg) rotate(270deg);
+  transform: rotateY(-90deg) 
+             translateZ(100px) 
+             rotatex(180deg) 
+             rotate(270deg);
 }
 
 .top {
-  transform: rotateX(90deg) translateZ(100px) rotate(-90deg) rotateY(180deg);
+  transform: rotateX(90deg)
+             translateZ(100px) 
+             rotate(-90deg) 
+             rotateY(180deg);
 }
 
 .top::before {
@@ -97,80 +113,57 @@ body {
 }
 
 .bottom {
-  transform: rotateX(90deg) translateZ(-100px);
+  transform: rotateX(90deg) 
+             translateZ(-100px);
 }
 
 @keyframes anim1 {
-  0% {
+  0%, 99.1%, 100% {
     transform: rotate(0deg);
   }
   10% {
     filter: blur(0.5px);
   }
-  20% {
+  20% , 99%{
     transform: rotate(-90deg);
-  }
-  99% {
-    transform: rotate(-90deg);
-  }
-  99.1% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(0deg);
   }
 }
 
 @keyframes anim2 {
-  0% {
-    transform: rotate(0deg);
-  }
-  20% {
-    transform: rotate(0deg);
-  }
-  40% {
+  0%, 20% , 40%,  99.1%, 100%{
     transform: rotate(0deg);
   }
   50% {
     filter: blur(1px);
   }
-  60% {
+  60% , 99%{
     transform: rotate(90deg);
-  }
-  99% {
-    transform: rotate(90deg);
-  }
-  99.1% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(0deg);
   }
 }
 
 @keyframes spin {
-  0% {
-    transform: rotateX(-35deg) rotateY(45deg) translateZ(0px) rotate(0deg);
+  0% , 20%{
+    transform: rotateX(-35deg) 
+               rotateY(45deg)
+               translateZ(0px)
+               rotate(0deg);
   }
-  20% {
-    transform: rotateX(-35deg) rotateY(45deg) translateZ(0px) rotate(0deg);
+  40% , 60%{
+    transform: rotateX(-35deg) 
+               rotateY(-45deg) 
+               translateZ(0px) 
+               rotate(0deg);
   }
-  40% {
-    transform: rotateX(-35deg) rotateY(-45deg) translateZ(0px) rotate(0deg);
+  80% , 99%{
+    transform: rotateX(-35deg)
+               rotateY(-45deg) 
+               translateZ(0px)
+               rotate(-90deg);
   }
-  60% {
-    transform: rotateX(-35deg) rotateY(-45deg) translateZ(0px) rotate(0deg);
-  }
-  80% {
-    transform: rotateX(-35deg) rotateY(-45deg) translateZ(0px) rotate(-90deg);
-  }
-  99% {
-    transform: rotateX(-35deg) rotateY(-45deg) translateZ(0px) rotate(-90deg);
-  }
-  99.1% {
-    transform: rotateX(-35deg) rotateY(45deg) translateZ(0px) rotate(0deg);
-  }
-  100% {
-    transform: rotateX(-35deg) rotateY(45deg) translateZ(0px) rotate(0deg);
+  99.1%, 100% {
+    transform: rotateX(-35deg)
+               rotateY(45deg) 
+               translateZ(0px) 
+               rotate(0deg);
   }
 }
