--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f2f2f2;
+  background: #111;
 }
 
 .wrapper {
@@ -39,6 +39,7 @@ body {
   background: var(--bg);
   position: absolute;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 .face::before,
